--- a/css/style.css
+++ b/css/style.css
@@ -1,87 +1,3 @@
-@font-face {
-  font-family: "Playfair Display";
-  src: url("../fonts/Playfair Display Bold.eot");
-  src: url("../fonts/Playfair Display Bold.eot?#iefix") format("embedded-opentype");
-  src: url("../fonts/Playfair Display Bold.woff2") format("woff2");
-  src: url("../fonts/Playfair Display Bold.woff") format("woff");
-  src: url("../fonts/Playfair Display Bold.svg#Playfair Display Bold") format("svg");
-  font-weight: 400;
-  font-style: normal;
-  font-stretch: normal;
-  unicode-range: U+0020-2212;
-}
-@font-face {
-  font-family: "Playfair Display";
-  src: url("../fonts/Playfair Display Bold.eot");
-  src: url("../fonts/Playfair Display Bold.eot?#iefix") format("embedded-opentype");
-  src: url("../fonts/Playfair Display Bold.woff2") format("woff2");
-  src: url("../fonts/Playfair Display Bold.woff") format("woff");
-  src: url("../fonts/Playfair Display Bold.svg#Playfair Display Bold") format("svg");
-  font-weight: 700;
-  font-style: normal;
-  font-stretch: normal;
-  unicode-range: U+0020-2212;
-}
-@font-face {
-  font-family: "Prata";
-  src: url("../fonts/Prata Regular.eot");
-  src: url("../fonts/Prata Regular.eot?#iefix") format("embedded-opentype");
-  src: url("../fonts/Prata Regular.woff2") format("woff2");
-  src: url("../fonts/Prata Regular.woff") format("woff");
-  src: url("../fonts/Prata Regular.svg#Prata Regular") format("svg");
-  font-weight: 400;
-  font-style: normal;
-  font-stretch: normal;
-  unicode-range: U+0020-2074;
-}
-@font-face {
-  font-family: "Roboto";
-  src: url("../fonts/Roboto Bold.eot");
-  src: url("../fonts/Roboto Bold.eot?#iefix") format("embedded-opentype");
-  src: url("../fonts/Roboto Bold.woff2") format("woff2");
-  src: url("../fonts/Roboto Bold.woff") format("woff");
-  src: url("../fonts/Roboto Bold.svg#Roboto Bold") format("svg");
-  font-weight: 700;
-  font-style: normal;
-  font-stretch: normal;
-  unicode-range: U+0020-2044;
-}
-@font-face {
-  font-family: "Roboto";
-  src: url("../fonts/Roboto.eot");
-  src: url("../fonts/Roboto.eot?#iefix") format("embedded-opentype");
-  src: url("../fonts/Roboto.woff2") format("woff2");
-  src: url("../fonts/Roboto.woff") format("woff");
-  src: url("../fonts/Roboto.svg#Roboto") format("svg");
-  font-weight: 400;
-  font-style: normal;
-  font-stretch: normal;
-  unicode-range: U+0020-2044;
-}
-@font-face {
-  font-family: "Roboto Medium";
-  src: url("Roboto Medium.eot");
-  src: url("Roboto Medium.eot?#iefix") format("embedded-opentype");
-  src: url("Roboto Medium.woff2") format("woff2");
-  src: url("Roboto Medium.woff") format("woff");
-  src: url("Roboto Medium.svg#Roboto Medium") format("svg");
-  font-weight: 500;
-  font-style: normal;
-  font-stretch: normal;
-  unicode-range: U+0020-2044;
-}
-@font-face {
-  font-family: "Roboto Light";
-  src: url("Roboto Light.eot");
-  src: url("Roboto Light.eot?#iefix") format("embedded-opentype");
-  src: url("Roboto Light.woff2") format("woff2");
-  src: url("Roboto Light.woff") format("woff");
-  src: url("Roboto Light.svg#Roboto Light") format("svg");
-  font-weight: 300;
-  font-style: normal;
-  font-stretch: normal;
-  unicode-range: U+0020-2044;
-}
 :root {
   box-sizing: border-box;
   font-size: calc(1vw + 1em);
@@ -91,6 +7,13 @@
 *::after,
 *::before {
   box-sizing: inherit;
+}
+
+h1,
+h2,
+h3,
+h4 {
+  margin: 0;
 }
 
 body {
@@ -135,6 +58,159 @@ ul {
   top: -3px;
 }
 
+.title {
+  font-family: "Playfair Display";
+  font-weight: 400;
+  color: #1B1A17;
+}
+
+.btn {
+  font-weight: 500;
+  font-size: 0.41rem;
+  line-height: 14px;
+  letter-spacing: 0.04em;
+  padding: 2em 3.2em;
+  text-transform: uppercase;
+  transition: backgroun 0.4s;
+}
+.btn:hover {
+  background: #000;
+}
+
+.dash__after,
+.dash__before {
+  position: relative;
+}
+
+.dash__after::after,
+.dash__before::before {
+  display: inline-block;
+  position: absolute;
+  content: "";
+  width: 3em;
+  height: 1px;
+  background-color: #1B1A17;
+}
+
+.dash__after::after {
+  top: 0.5em;
+  right: -4.3em;
+}
+
+.dash__before::before {
+  bottom: 0.7em;
+  left: -3.8em;
+}
+
+.header {
+  background-color: #FDFDFB;
+}
+.header__box {
+  display: flex;
+  background: #FDFDFB url("../images/header_bg.svg") no-repeat center;
+  justify-content: space-between;
+  background-position-x: 55%;
+  background-size: contain;
+  align-items: center;
+  min-height: 370px;
+}
+@media screen and (max-width: 730px) {
+  .header__box {
+    background-size: 15em;
+    background-position-x: right;
+    justify-content: center;
+  }
+}
+.header__text-box {
+  padding-left: 2.8em;
+  flex-basis: 40%;
+}
+@media screen and (max-width: 730px) {
+  .header__text-box {
+    flex-basis: 55%;
+  }
+}
+@media screen and (max-width: 420px) {
+  .header__text-box {
+    padding: 0;
+    flex-basis: 80%;
+    text-align: center;
+  }
+}
+.header__title {
+  font-size: 1.5rem;
+  line-height: 1.42;
+  margin-bottom: 0.6em;
+}
+.header__title > span {
+  font-size: 0.67em;
+  display: block;
+}
+.header__title::before {
+  top: 0.8em;
+  left: -1.4em;
+  width: 1.1em;
+}
+@media screen and (max-width: 420px) {
+  .header__title::before {
+    display: none;
+  }
+}
+.header__description {
+  font-weight: 300;
+  font-size: 14px;
+  line-height: 21px;
+  color: rgba(27, 26, 23, 0.82);
+  margin-bottom: 3.4em;
+}
+.header__btn {
+  color: #ffffff;
+  background: #444240;
+}
+.header__banner {
+  display: flex;
+  justify-content: center;
+  flex-basis: 60%;
+  padding: 0.5em 0;
+  position: relative;
+}
+@media screen and (max-width: 730px) {
+  .header__banner {
+    flex-basis: 45%;
+  }
+}
+@media screen and (max-width: 420px) {
+  .header__banner {
+    display: none;
+  }
+}
+.header__banner > img {
+  width: 57%;
+}
+.header__banner-left {
+  top: 18%;
+  left: 3%;
+}
+.header__banner-right {
+  bottom: 16%;
+  right: 2%;
+}
+.header__banner-text {
+  display: block;
+  position: absolute;
+  font-family: "Prata", serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 0.55rem;
+  line-height: 22px;
+  color: #1B1A17;
+}
+@media screen and (max-width: 730px) {
+  .header__banner-text {
+    display: none;
+  }
+}
+
 .nav {
   display: flex;
   justify-content: space-between;
@@ -161,6 +237,7 @@ ul {
 .nav__icon > span {
   display: block;
   height: 16px;
+  background-size: contain;
 }
 .nav__icon-search {
   width: 16px;
@@ -188,20 +265,18 @@ ul {
   background: url("../images/icons/basket_icon.svg") center no-repeat;
 }
 .nav__hamburger {
-  display: block;
+  display: none;
   height: 14px;
   width: 18px;
-  display: flex;
   flex-direction: column;
   justify-content: space-between;
 }
-@media screen and (min-width: 550px) {
+@media screen and (max-width: 550px) {
   .nav__hamburger {
-    display: none;
+    display: flex;
   }
 }
 .nav__hamburger .line {
-  display: block;
   height: 2px;
   width: 100%;
   border-radius: 10px;
@@ -229,14 +304,14 @@ ul {
 }
 
 .menu {
-  display: none;
+  display: flex;
   justify-content: space-between;
   margin: 0;
   flex-basis: 36%;
 }
-@media screen and (min-width: 550px) {
+@media screen and (max-width: 550px) {
   .menu {
-    display: flex;
+    display: none;
   }
 }
 .menu > * + * {
