feat: add section cards

--- a/css/_header.sass
+++ b/css/_header.sass
@@ -47,19 +47,19 @@
         display: flex
         justify-content: center
         flex-basis: 60%
-        padding: 0.5em 0
+        padding: 0.5em 0 0 0
         position: relative
         @media screen and (max-width: 730px)
             flex-basis: 45%
         @media screen and (max-width: 420px)
             display: none
         & > img
-            width: 57%
+            width: 56%
         &-left
             top: 18%
-            left: 3%
+            left: 2%
         &-right
-            bottom: 16%
+            bottom: 14%
             right: 2%
         &-text
             display: block
