--- a/css/_style.sass
+++ b/css/_style.sass
@@ -72,3 +72,7 @@ ul
 .dash__before::before
     bottom: 0.7em
     left: -3.8em
+.links_active
+    transition: color .3s
+    &:hover
+        color: #C4C0B6
