--- a/css/_products.sass
+++ b/css/_products.sass
@@ -1,5 +1,6 @@
 .products
     padding-top: 2.8em
+    padding-bottom: 3em
     &__title
         text-align: center
         font-size: 1.08rem
@@ -58,6 +59,7 @@
         background: linear-gradient(90deg, rgba(226,208,196,0) 15%, rgba(226,208,196,1)100%)
         border-radius: 50%
         padding: 2px
+        margin-bottom: 0.3em
     &__img
         position: relative
         border-radius: 50%
