--- a/css/style.css
+++ b/css/style.css
@@ -540,4 +540,95 @@ ul {
   display: inline-block;
   background: #D4B098;
   color: #fff;
+}
+
+.news {
+  padding: 3em 0 3em 0;
+  display: flex;
+  justify-content: space-between;
+}
+@media screen and (max-width: 620px) {
+  .news {
+    display: block;
+  }
+}
+.news__text {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding-top: 3em;
+  padding-left: 0.3em;
+  flex-basis: 46%;
+}
+@media screen and (max-width: 620px) {
+  .news__text {
+    padding: 0;
+    text-align: center;
+  }
+}
+.news__title {
+  font-size: 1.08rem;
+  margin-bottom: 0.41em;
+}
+.news__description {
+  font-size: 0.54rem;
+  max-width: 23.5em;
+  line-height: 1.6;
+  margin-bottom: 6.7em;
+}
+@media screen and (max-width: 620px) {
+  .news__description {
+    margin: 0 auto;
+    margin-bottom: 2em;
+  }
+}
+.news__links > * + * {
+  margin-left: 0.4em;
+}
+@media screen and (max-width: 620px) {
+  .news__links {
+    margin-bottom: 2em;
+  }
+}
+.news__gallery {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-basis: 54%;
+  height: 15.6em;
+}
+@media screen and (max-width: 620px) {
+  .news__gallery {
+    margin-left: 0.5em;
+  }
+}
+.news__gallery-box {
+  display: flex;
+  flex-direction: column;
+  width: 40%;
+  height: 100%;
+  margin-right: 0.5em;
+}
+.news__gallery-box > .news__img {
+  height: 100%;
+  width: 100%;
+}
+.news__gallery-box > * + * {
+  margin-top: 0.5em;
+}
+.news__img {
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+.news__img-1 {
+  background-image: url(../images/photo_1.jpg);
+}
+.news__img-2 {
+  background-image: url(../images/photo_2.jpg);
+}
+.news__img-3 {
+  width: 60%;
+  height: 15.6em;
+  background-image: url(../images/photo_3.jpg);
 }/*# sourceMappingURL=style.css.map */
